changed getting top 3 subscriptions and made refactor